--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Build settings
 markdown: kramdown
-theme: Basic #minima
+theme: minima
 gems:
   - jekyll-feed
 exclude:
