--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Researcher
-url: "http://ankitsultana.me"
+title: Ryoji Tanabe's Homepage
+url: "https://ryojitanabe.github.io"
 # baseurl: "/researcher"
 
 markdown: kramdown
