--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -4,6 +4,17 @@
 #- name: "Resume"
  # link: "resume.pdf"
 
+
+
+- name: "パブリケーション"
+  link: "publication-j"
+
+- name: "アバウト"
+  link: "about-j"
+
+- name: "ホーム"
+  link: "index-j"
+
 - name: "Publication"
   link: "publication"
 
