--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ url: "https://ryojitanabe.github.io"
 
 markdown: kramdown
 
-tracking_id: #
+tracking_id: UA-40464842-3
 
 sass:
     style: compressed
